Add delete method to API
